# Adventure-Designer-Studio

./: .clang-format  .clangd  .env.example  .gitignore  .gitmodules  .vsconfig  Adventure-Designer-Studio.sln  Adventure-Designer-Studio.vcxproj  Adventure-Designer-Studio.vcxproj.filters  CHANGELOG.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  COMPILE.md  DESIGN.md  LIBRARY_SETUP.md  LICENSE  LICENSE.md  README.md  VCPKG_MIGRATION.md  build.bat  build.sh  main.cpp  setup-reference-libs.sh  vcpkg-configuration.json  vcpkg.json
docs/Dev/: new-property.md
docs/core/: core.md  questions.md
docs/core/lexicon/: Lexingine.md  lexicon.cpp  vocabulary.md
docs/core/schemas/: item.md  scene.md
include/: i18nUtils.cpp  string.h
public/translations/core/: de_DE.json  en_US.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json  ru_RU.json
src/: app.cpp  app.h
src/classes/Core/: Project.cpp  Project.h
src/classes/Data/: BaseData.h  CharacterData.h  ItemData.h  SceneData.h
src/classes/Entities/: BaseEntity.cpp  BaseEntity.h  Character.cpp  Character.h  Item.cpp  Item.h  Scene.cpp  Scene.h
src/classes/IDE/: IDEBase.cpp  IDEBase.h  IDERenderer.cpp  IDERenderer.h  LayoutManager.cpp  LayoutManager.h  MenuBarRenderer.cpp  MenuBarRenderer.h
src/classes/IDE/navigation/: MenuBarRenderer.cpp  MenuBarRenderer.h  NavigationConstants.h  NavigationService.cpp  NavigationService.h  ToolBarRenderer.cpp  ToolBarRenderer.h
src/classes/IDE/panels/: BasePanel.cpp  BasePanel.h  EntitiesPanel.cpp  EntitiesPanel.h  InspectorPanel.cpp  InspectorPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  StatusBarPanel.cpp  StatusBarPanel.h  WorkingAreaPanel.cpp  WorkingAreaPanel.h
src/classes/IDE/themes/: DarkTheme.cpp  DarkTheme.h  LightTheme.cpp  LightTheme.h  Theme.cpp  Theme.h
src/classes/Inspector/: IInspectable.h  PropertyConstraints.cpp  PropertyConstraints.h  PropertyDescriptor.cpp  PropertyDescriptor.h  PropertyEditorRegistry.cpp  PropertyEditorRegistry.h  PropertyEvent.cpp  PropertyEvent.h  PropertyType.h  PropertyValue.h
src/classes/Inspector/Editors/: BoolEditor.cpp  BoolEditor.h  ColorEditor.cpp  ColorEditor.h  EnumEditor.cpp  EnumEditor.h  FloatEditor.cpp  FloatEditor.h  IPropertyEditor.h  IntEditor.cpp  IntEditor.h  StringEditor.cpp  StringEditor.h  Vector2Editor.cpp  Vector2Editor.h
src/classes/Logger/: logger.cpp  logger.h
src/classes/Types/: Color.h
src/classes/UI/: UI.cpp  UI.h  Window.cpp  Window.h  fonts.cpp  fonts.h
src/classes/env/: env.cpp  env.h
src/classes/i18n/: i18n.cpp  i18n.h  translations.cpp  translations.h
src/constants/: System.h  SystemConst.h  languages.h
src/exceptions/: PathNotExistException.h  base_exception.h  file_not_found_exception.h  file_not_open_exception.h  not_found_exception.h  path_not_exist_exception.h
src/exceptions/filesystem/: file_not_found_exception.h  file_not_open_exception.h  path_not_exist_exception.h
src/exceptions/imgui/: window_intialization_exception.h
src/exceptions/json/: json_parse_exception.h
src/include/: adsString.cpp  adsString.h  app.cpp  app.h  i18nUtils.cpp  i18nUtils.h  im_gui_tools.cpp  im_gui_tools.h
tests/: CMakeLists.txt  I18nTests.cpp  I18nTests.h  i18nTests.cpp  i18nTests.h
translations/core/: en_US.json  es_ES.json  fr_FR.json  it_IT.json  ru_RU.json
vcpkg-overlays/libsystemd/: portfile.cmake
